--- a/services/college/requirements.txt
+++ b/services/college/requirements.txt
@@ -1,4 +1,6 @@
+alembic==1.0.7
 amqp==2.4.1
+astroid==2.1.0
 certifi==2018.11.29
 chardet==3.0.4
 dnspython==1.16.0
@@ -6,15 +8,25 @@ eventlet==0.24.1
 greenlet==0.4.15
 idna==2.8
 importlib-metadata==0.8
+isort==4.3.4
 kombu==4.3.0
+lazy-object-proxy==1.3.1
+Mako==1.0.7
+MarkupSafe==1.1.0
+mccabe==0.6.1
 mock==2.0.0
 monotonic==1.5
 nameko==2.11.0
 path.py==11.5.0
 pbr==5.1.2
+psycopg2==2.7.7
+pylint==2.2.2
+python-dateutil==2.8.0
+python-editor==1.0.4
 PyYAML==3.13
 requests==2.21.0
 six==1.12.0
+SQLAlchemy==1.2.18
 urllib3==1.24.1
 vine==1.2.0
 Werkzeug==0.14.1
