--- a/gateway/requirements.txt
+++ b/gateway/requirements.txt
@@ -1,5 +1,6 @@
 amqp==2.4.1
 aniso8601==4.1.0
+astroid==2.1.0
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
@@ -12,16 +13,20 @@ Flask-Script==2.0.6
 greenlet==0.4.15
 idna==2.8
 importlib-metadata==0.8
+isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10
 jsonschema==2.6.0
 kombu==4.3.0
+lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
+mccabe==0.6.1
 mock==2.0.0
 monotonic==1.5
 nameko==2.11.0
 path.py==11.5.0
 pbr==5.1.2
+pylint==2.2.2
 pytz==2018.9
 PyYAML==3.13
 requests==2.21.0
